common-applications/freesky-icsl-hk-cluster/xihe-test-v2/xihe-server/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xihe-server
  namespace: xihe-test-v2
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: xihe-server
  template:
    metadata:
      labels:
        app: xihe-server
    spec:
      containers:
      - name: xihe-server
        image: swr.cn-north-4.myhuaweicloud.com/opensourceway/xihe/xihe-server:97f347b62bf46f56cedb5886999fa8335b9fcefb
        imagePullPolicy: IfNotPresent
        args:
        - --port=8000
        - --config-file=/opt/app/conf/config.yaml
        - --enable_debug=true
        resources:
          requests:
            cpu: 1000m
            memory: 1000Mi
          limits:
            cpu: 1000m
            memory: 1000Mi
        ports:
        - containerPort: 8000
          name: http
          protocol: TCP
        volumeMounts:
        - mountPath: /opt/app/conf
          name: config
      volumes:
      - name: config
        configMap:
          name: server-configmap
